tests/rosetta/out/Smalltalk/burrows-wheeler-transform.out
/tmp/burrows-wheeler-transform.st:7: parse error, expected ']'
